# MaterialX

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ColorGUIController.js  FallbackMaterial.js  JsMaterialXGenShader.js  JsMaterialXGenShader.wasm  Makefile  README.md  cmake_install.cmake  index.ejs  index.html  index.js  install_manifest.txt  main.js  mtlx-threejs_converter.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: build_linux.yml  build_wasm.yml
Materials/Examples/StandardSurface/: user_bug.mtlx
cmake/: MaterialXConfig.cmake  usd.cmake  utils.cmake
cmake/modules/: FindUSD.cmake
dependencies/bxdf/: disney_brdf_2012.mtlx
dependencies/stdlib/genglsl/: stdlib_genglsl_unit_impl.mtlx
documents/DeveloperGuide/: Viewer.md
installed/cmake/: MaterialXConfig.cmake  MaterialXConfigVersion.cmake
installed/resources/: CTestTestfile.cmake  cmake_install.cmake
libraries/: CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
libraries/bxdf/: gltf_pbr_next_extensions.mtlx
libraries/codlib/: codlib_defs.mtlx  codlib_ng.mtlx
libraries/stdlib/: stdlib_defs.mtlx
libraries/stdlib/genglsl/: mx_worleynoise2d_float.glsl  mx_worleynoise2d_vector2.glsl  mx_worleynoise2d_vector3.glsl  mx_worleynoise3d_float.glsl  mx_worleynoise3d_vector2.glsl  mx_worleynoise3d_vector3.glsl  stdlib_genglsl_impl.mtlx
libraries/stdlib/genmdl/: stdlib_genmdl_impl.mtlx
libraries/stdlib/genosl/: stdlib_genosl_impl.mtlx
libraries/targets/: base.mtlx
public/: style.css
public/lights/: cold_lamp.mtlx
public/materials/demo/: demo.mtlx
public/meshes/: cloth.glb  teapot.glb
python/Scripts/: generateShader.py
resources/Geometry/: glass_filll.glb  plane.glb  rectangle.glb
resources/Materials/TestSuite/: _options.mtlx
source/JsMaterialX/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/JsMaterialX/JsMaterialXView/: index.ejs  index.html  shader-frag.glsl  shader-vert.glsl  webpack.config.js
source/JsMaterialXView/: JsMaterialXGenShader.wasm  index.ejs  webpack.config.js
source/JsMaterialXView/src/: helper.js  index.js  utils_3D.js
source/MaterialXCodegen/: Attribute.cpp  Attribute.h  CMakeLists.txt  ColorManagement.cpp  ColorManagement.h  Context.cpp  Context.h  Fragment.cpp  Fragment.h  FragmentCompiler.cpp  FragmentCompiler.h  FragmentGenerator.cpp  FragmentGenerator.h  Library.h  SourceCode.cpp  SourceCode.h  Syntax.cpp  Syntax.h
source/MaterialXCodegen/Fragments/: Bsdfs.cpp  Bsdfs.h  Conditionals.cpp  Conditionals.h  Convert.cpp  Convert.h
source/MaterialXCodegen/OSL/: OslCompiler.cpp  OslCompiler.h  OslContext.cpp  OslContext.h  OslFragmentCompiler.cpp  OslFragmentCompiler.h  OslFragmentGenerator.cpp  OslFragmentGenerator.h  OslGenerator.cpp  OslGenerator.h  OslSyntax.cpp  (+1 more)
source/MaterialXContrib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/MaterialXCore/: CTestTestfile.cmake  Definition.cpp  Definition.h  Geom.h  Makefile  Node.cpp  cmake_install.cmake
source/MaterialXFormat/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/MaterialXGenArnold/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/MaterialXGenCross/: CMakeLists.txt  Cross.cpp  Cross.h  Export.h  HLSLShaderGenerator.cpp  HLSLShaderGenerator.h  MaterialXGenCross.cpp  MaterialXGenCross.h  SPIRVShaderGenerator.cpp  SPIRVShaderGenerator.h
source/MaterialXGenEssl/: CTestTestfile.cmake  EsslShaderGenerator.cpp  EsslShaderGenerator.h  EsslSyntax.h  Makefile  cmake_install.cmake
source/MaterialXGenGLES/: CMakeLists.txt  GLESShaderGenerator.cpp  GLESShaderGenerator.h  GLESSyntax.cpp  GLESSyntax.h
source/MaterialXGenGlsl/: CTestTestfile.cmake  GlslShaderGenerator.cpp  GlslShaderGenerator.h  Makefile  cmake_install.cmake
source/MaterialXGenMdl/: CTestTestfile.cmake  Makefile  MdlShaderGenerator.cpp  MdlShaderGenerator.h  cmake_install.cmake
source/MaterialXGenOgsFx/: CTestTestfile.cmake  Makefile  OgsFxShaderGenerator.cpp  OgsFxShaderGenerator.h  cmake_install.cmake
source/MaterialXGenOgsXml/: CTestTestfile.cmake  GlslFragmentGenerator.cpp  GlslFragmentGenerator.h  Makefile  cmake_install.cmake
source/MaterialXGenOsl/: CTestTestfile.cmake  Makefile  OslShaderGenerator.cpp  OslShaderGenerator.h  cmake_install.cmake
source/MaterialXGenShader/: CMakeLists.txt  CTestTestfile.cmake  ColorManagementSystem.cpp  ColorManagementSystem.h  DefaultColorManagementSystem.cpp  GenOptions.h  HwShaderGenerator.cpp  HwShaderGenerator.h  Makefile  OCIOColorManagementSystem.cpp  OCIOColorManagementSystem.h  ShaderGenerator.cpp  ShaderGenerator.h  ShaderGraph.cpp  ShaderGraph.h  ShaderNode.h  ShaderNodeImpl.h  ShaderStage.h  Syntax.h  Util.cpp  cmake_install.cmake
source/MaterialXRender/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Mesh.cpp  ShaderRenderer.h  TinyGLTFLoader.cpp  TinyGLTFLoader.h  Util.cpp  cmake_install.cmake
source/MaterialXRenderGlsl/: CTestTestfile.cmake  GlslProgram.cpp  GlslProgram.h  GlslRenderer.cpp  Makefile  TextureBaker.cpp  cmake_install.cmake
source/MaterialXRenderHw/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/MaterialXRenderOsl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/MaterialXRuntime/: CMakeLists.txt  Library.h  RtApi.cpp  RtApi.h  RtAttribute.cpp  RtAttribute.h  RtBackdrop.cpp  RtCollection.cpp  RtFileIo.cpp  RtGeneric.cpp  RtGeomPropDef.cpp  RtGeomPropDef.h  RtLook.cpp  RtNode.cpp  RtNodeDef.cpp  RtNodeDef.h  RtNodeGraph.cpp  RtNodeImpl.cpp  RtNodeImpl.h  RtPath.h  RtPort.cpp  RtPort.h  RtRelationship.cpp  RtRelationship.h  RtSchema.cpp  RtSchema.h  RtStage.h  RtTargetDef.cpp  RtTraversal.cpp  RtTraversal.h  RtTypeDef.cpp  RtTypeDef.h  RtValue.cpp  RtValue.h  Tokens.cpp  Tokens.h
source/MaterialXTest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Runtime.cpp  cmake_install.cmake
source/MaterialXView/: CMakeLists.txt  CTestTestfile.cmake  Main.cpp  Makefile  Material.cpp  Material.h  Viewer.cpp  Viewer.h  cmake_install.cmake
src/: index.ejs  package-lock.json  package.json  webpack.config.js
src/src/: index.js
(+172 files in other folders)
